libpurple/wrapper/Util.cs


		public static void FetchUrlCancel(PurpleUtilFetchUrlData url_data)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_url_decode(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_url_decode(string str);

		public static string UrlDecode(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_url_encode(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_url_encode(string str);

		public static string UrlEncode(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_email_is_valid(char * address)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_email_is_valid(string address);

		public static bool EmailIsValid(string address)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_ip_address_is_valid(char * ip)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_ip_address_is_valid(string ip);

		public static bool IpAddressIsValid(string ip)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_uri_list_extract_uris(gchar * uri_list)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_uri_list_extract_uris(string uri_list);

		public static GList UriListExtractUris(string uri_list)
		{
			throw new NotImplementedException();
		}

		/*
		 * GList * purple_uri_list_extract_filenames(gchar * uri_list)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_uri_list_extract_filenames(string uri_list);

		public static GList UriListExtractFilenames(string uri_list)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_utf8_try_convert(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_try_convert(string str);

		public static string Utf8TryConvert(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_utf8_salvage(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_salvage(string str);

		public static string Utf8Salvage(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_utf8_strip_unprintables(gchar * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_strip_unprintables(string str);

		public static string Utf8StripUnprintables(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_gai_strerror(gint errnum)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_gai_strerror(int errnum);

		public static string GaiStrerror(int errnum)
		{
			throw new NotImplementedException();
		}

		/*
		 * int purple_utf8_strcasecmp(char * a, char * b)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_utf8_strcasecmp(string a, string b);

		public static int Utf8Strcasecmp(string a, string b)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_utf8_has_word(char * haystack, char * needle)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_utf8_has_word(string haystack, string needle);

		public static bool Utf8HasWord(string haystack, string needle)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_print_utf8_to_console(FILE * filestream, char * message)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_print_utf8_to_console(IntPtr filestream, string message);

		public static void PrintUtf8ToConsole(FILE filestream, string message)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_message_meify(char * message, gssize len)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_message_meify(string message, UNKNOWN len);

		public static bool MessageMeify(string message, gssize len)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_text_strip_mnemonic(char * in)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_text_strip_mnemonic(string in);

		public static string TextStripMnemonic(string in)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_unescape_filename(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_unescape_filename(string str);

		public static string UnescapeFilename(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_escape_filename(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_escape_filename(string str);

		public static string EscapeFilename(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * _purple_oscar_convert(char * act, char * protocol)
		 */
		[DllImport("libpurple.dll")]
		private static extern string _purple_oscar_convert(string act, string protocol);

		public static string _purpleOscarConvert(string act, string protocol)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_restore_default_signal_handlers()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_restore_default_signal_handlers();

		public static void RestoreDefaultSignalHandlers()
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_get_host_name()
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_get_host_name();

		public static string GetHostName()
		{
			throw new NotImplementedException();
		}

	}
}

